--- a/hang.html
+++ b/hang.html
@@ -35,7 +35,7 @@
 	<h2>Handpan</h2>
 
     <p>The handpan is a flying-saucer looking metalic drum with a wonderful sound. 
-        It is one of the latest instruments invented and (I think) the only one where we tap on metal with our bare hands.</p>
+        It is one of the latest instruments invented and the first one where we tap on metal with our bare hands.</p>
     <p>I will spare you my playing. Here is what it sounds like when played by pros.</p>
 
 
