--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				Salty madeleines with duck prosciutto are really good, but I still prefer the sweet madeleines with lemon zest and pine nuts.
 			</p>
 
-			<p>Lately, I'm learning to make <a href="recipes/desserts/canneles.html">cannelés</a>.</p>
+			<p>I'm learning to make <a href="recipes/desserts/canneles.html">cannelés</a>. They are good but it may take a few more trials for the perfect consistency.</p>
 			<div id="recipes_learning2" class="pixGroup evolPix">
 				<div class="pixTitleHolder"><a href="recipes/desserts/canneles.html"><img src="pix/recipes/canneles.jpg"><div class="pixTitle">Cannelés</div></a></div>
 				<div class="clearer"></div>
@@ -127,7 +127,7 @@
 
 			<p></p>
 
-			<p>I recently learned that <a class="extlink" target="ted" rel="noopener" href="https://www.ted.com/talks/brian_dettmer_old_books_reborn_as_intricate_art">old books could be reborn as art</a>, and I liked the idea, so I'm giving <a href="book-carving.html">a try at book carving</a>.</p>
+			<p>Sometimes I try things like <a href="book-carving.html">book carving</a>.</p>
 			
 		</td>
 	</tr>
@@ -136,7 +136,7 @@
 	<tr id="comics" class="c3">
 		<td><span class="sTitle">Graphic Novels</span></td>
 		<td class="pad">
-			<p>I like to read and collect graphic novels, mostly sci-fi, usually in French.</p>
+			<p>I like to read and collect graphic novels, mostly sci-fi and fantasy, usually in French.</p>
 			<div id="comics2" class="pixGroup comicsPix"></div>
 
 			<p>... and sometimes in English.</p>
@@ -151,6 +151,10 @@
 		<td class="pad">
 			<p>I like to watch sci-fi movies and anime but I do not own a TV.</p>
 			<div id="movies2" class="pixGroup moviePix"></div>
+
+			<p>I'm patiently waiting for 
+				<a class="extlink" href="https://www.imdb.com/title/tt1160419" target="_blank" rel="noopener">Dune</a> and 
+				<a class="extlink" href="https://www.imdb.com/title/tt10838180" target="_blank"  rel="noopener">Matrix 4</a>.</p>
 		</td>
 	</tr>
 </table>
@@ -160,11 +164,13 @@
 		<td class="pad">
 			<p>I like to meditate and to make <a class="extlink" target="_blank" rel="noopener" href="http://chakradesign.com/gallery.html">chakras charms</a>.</p>
 			<div id="chakras2" class="pixGroup chakraPix"></div>
-			<p>I'm learning to play the
+			<p>I'm (slowly) learning to play the
 			<a href="hang.html">handpan</a>.</p>
-			</td>
+
+		</td>
 	</tr>
 </table>
+
 <div id="egg">
 	<div id="you">
 		<div class="ml60">Try something fun and different today:</div>
