Layout improvement: color dots menu moved to the left, round profile picture...

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 			<span class="clearer"></span>
 		</div>
 
+			<div class="hello bounce">
+				<h2 class="helloworld">Hello</h2>
+			</div>
+			<div class="dear shake">Dear anonymous visitor</div> 
 		<div class="avatar-holder">
 			<div class="avatar">
 				<div class="pixTitleHolder">
@@ -45,16 +49,10 @@
 				</span>
 			</div>
 		</div>
-		<div class="hello">
-			<h2 class="helloworld">Hello</h2>
-		</div>
-		<div class="dear">Dear anonymous visitor</div>
-		<div class="japancircle"></div>
 	</div>
 </section>
 
 <section id="me" class="c7">
-	<span class="sTitle">Me</span>
 	<div class="pad">
 		<div class="me"> 
 			<div>
@@ -63,8 +61,10 @@
 				<p>I live in the San Francisco Bay Area with my lovely cat <a href="neige.html">Neige</a>.
 				I work in Tech. I'm French.</p>
 				<p>I hope you will find this page a more fun and personal way to meet me than my <a href="https://www.linkedin.com/in/giulieri">LinkedIn</a> and <a href="https://github.com/evoluteur">GitHub</a> profiles.</p>
-			</div>		
+			</div>	
+			<div class="japancircle"></div>	
 		</div>
+		<div class="clearer"></div>
 	</div>
 </section>
 
@@ -107,6 +107,9 @@
 			<p>I'm learning to make <a href="recipes/desserts/canneles.html">cannelés</a>. They are good but it may take a few more trials for the perfect consistency.</p>
 			<div id="recipes_learning2" class="pixGroup evolPix">
 				<div class="pixTitleHolder"><a href="recipes/desserts/canneles.html"><img src="pix/recipes/canneles.jpg"><div class="pixTitle">Cannelés</div></a></div>
+				
+				<div class="jcircle"></div>	
+				
 				<div class="clearer"></div>
 			</div>
 			
@@ -191,7 +194,7 @@
 
 <div class="bottomSpace"></div>
 
-<footer>&#169; 2020 Olivier Giulieri - Version 2020.05.23</footer>
+<footer>&#169; 2020 Olivier Giulieri - Version 2020.09.24</footer>
 
 </body>
 
