Added screenshot of my GitHub repositories, followers, stars, and forks network graph.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="pad">
 
 		<div class="c7-dots">
-			<a href="#hello" class="c7-dots-7"><div></div><span class="dTitle">Me</span></a>
+			<a href="#hello" class="c7-dots-7"><div></div><span class="dTitle">Hello</span></a>
 			<a href="#code" class="c7-dots-6"><div></div><span class="dTitle">Code</span></a>
 			<a href="#recipes" class="c7-dots-5"><div></div><span class="dTitle">Cooking</span></a>
 			<a href="#fractals" class="c7-dots-4"><div></div><span class="dTitle">Inspiration</span></a>
@@ -77,16 +77,22 @@
 			<p>I am very interested in metadata and model-driven architecture (usually found in code generators, low-code platforms, and data visualization).
 			I experiment with my open-source project Evolutility model-driven <a class="extlink" target="_blank" rel="noopener" href="https://github.com/evoluteur/evolutility-ui-react">UI</a> and <a class="extlink" target="_blank" rel="noopener" href="https://github.com/evoluteur/evolutility-server-node">backend</a>, 
 			as well as other side-projects.</p>
-
 			
 			<div id="code2" class="pixGroup evolPix"></div>
-
+			
+			<p>Lately, I'm looking at the network emerging from these projects (with stargazers and forks) on GitHub.<br/>
+				<a class="pix" target="_blank" rel="noopener" href="https://evoluteur.github.io/meet-the-fans/">
+					<div class="pixTitleHolder gh-network">
+						<img src="pix/github-network-graph.gif">
+					</div>
+				</a>
+			</p>
+	
 			<p>My favorite quote about programming is 
 				<i>"Smart data structures and dumb code works a lot better than the
 		other way around."</i> - Eric S. Raymond
 			in <a class="extlink" target="_blank" rel="noopener" href="https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar">The Cathedral and the Bazaar</a>. 
 			</p>
-			
 		</td>
 	</tr>
 </table>
