--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 					<div class="pixTitleHolder gh-network">
 						<img src="pix/github-network-graph.gif">
 					</div>
+					<div class="clearer"></div>
 				</a>
 			</p>
 	
