--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 			
 			<div id="code2" class="pixGroup evolPix"></div>
 			
-			<p>Lately, I'm looking at the network emerging from these projects (with stargazers and forks) on GitHub.<br/>
+			<p>Lately, I'm looking at the network emerging from these projects as they get stars and forks on GitHub.<br/>
 				<a class="pix" target="_blank" rel="noopener" href="https://evoluteur.github.io/meet-the-fans/">
 					<div class="pixTitleHolder gh-network">
-						<img src="pix/github-network-graph.gif">
+						<img src="pix/code/github-network-graph.gif">
 					</div>
 				</a>
 				<div class="clearer"></div>
